// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders Radio Group correctly 1`] = `
<div
  class="zw-radio-group"
>
  <label
    class="zw-radio is-checked"
  >
    <input
      checked=""
      class="zw-radio__input"
      type="radio"
      value="a"
    />
    <span
      class="zw-radio__inner"
    />
    A
  </label>
  <label
    class="zw-radio"
  >
    <input
      class="zw-radio__input"
      type="radio"
      value="b"
    />
    <span
      class="zw-radio__inner"
    />
    B
  </label>
  <label
    class="zw-radio"
  >
    <input
      class="zw-radio__input"
      type="radio"
      value="c"
    />
    <span
      class="zw-radio__inner"
    />
    C
  </label>
  <label
    class="zw-radio"
  >
    <input
      class="zw-radio__input"
      type="radio"
      value="d"
    />
    <span
      class="zw-radio__inner"
    />
    D
  </label>
</div>
`;

exports[`Radio renders checked Radio correctly 1`] = `
<div>
  <label
    class="zw-radio is-checked"
  >
    <input
      checked=""
      class="zw-radio__input"
      type="radio"
    />
    <span
      class="zw-radio__inner"
    />
    选择
  </label>
</div>
`;

exports[`Radio renders disabled Radio correctly 1`] = `
<div>
  <label
    class="zw-radio is-disabled"
  >
    <input
      class="zw-radio__input"
      disabled=""
      type="radio"
      value="a"
    />
    <span
      class="zw-radio__inner"
    />
    选择
  </label>
</div>
`;

exports[`Radio renders normal Radio correctly 1`] = `
<div>
  <label
    class="zw-radio"
  >
    <input
      class="zw-radio__input"
      type="radio"
      value="a"
    />
    <span
      class="zw-radio__inner"
    />
    选择
  </label>
</div>
`;
